# suggestdpi

./: .gitignore  CMakeLists.txt  LICENSE  buffer.c  buffer.h  config.c  config.h  format.c  format.h  log.c  log.h  main.c  screen_info.c  screen_info.h
